# kaleidoscope-focus.rs

./: .drone.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: auto-build.yml  focus-send.yml
docs/: focus-send.md
focus-send/: Cargo.toml
focus-send/src/: main.rs
kaleidoscope/: Cargo.toml
kaleidoscope-focus/: Cargo.toml
kaleidoscope-focus-cli/: Cargo.toml
kaleidoscope-focus-cli/docs/: focus.md
kaleidoscope-focus-cli/src/: shared.rs
kaleidoscope-focus/src/: lib.rs
kaleidoscope/src/: lib.rs
src/: lib.rs  main.rs
src/cli/: focus-send.rs  focus.rs  shared.rs
