[package]
name = "kaleidoscope"
version = "0.1.0-snapshot"
description = "A library to talk with Kaleidoscope-powered devices using the Focus protocol"
categories = ["hardware-support"]
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.59.0"

[dependencies]
serialport = "4.2.0"

[dependencies.indicatif]
version = "0.17.1"
optional = true

[dependencies.clap]
version = "4.0.0-rc.2"
default_features = false
features = ["std", "derive", "env", "help", "usage"]
optional = true

[features]
default = ["build-binary"]
build-binary = ["indicatif", "clap"]

[[bin]]
name = "focus"
required-features = ["build-binary"]

[profile.release]
strip = true
panic = "abort"
lto = true
