[package]
name = "kaleidoscope_focus"
version = "0.1.0-snapshot"
description = "A library to talk with Kaleidoscope-powered devices using the Focus protocol"
categories = ["hardware-support"]
license = "GPL-3.0-only"
homepage = "https://github.com/keyboardio/kaleidoscope-focus.rs"
repository = "https://github.com/keyboardio/kaleidoscope-focus.rs"
edition = "2021"
rust-version = "1.59.0"
exclude = [
  ".github/*",
]

[dependencies]
serialport = "4.2"

[features]
default = []
build-binary = ["anyhow", "clap", "indicatif", "serde", "serde_json"]

[profile.release]
strip = true
panic = "abort"
lto = true

## Dependencies & Configuration for CLI tools

[dependencies.anyhow]
version = "1.0"
optional = true

[dependencies.clap]
version = "4.0"
default-features = false
features = ["std", "derive", "env", "help", "usage"]
optional = true

[dependencies.indicatif]
version = "0.17.1"
optional = true

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
optional = true

[[bin]]
name = "focus"
path = "src/cli/focus.rs"
required-features = ["build-binary"]

[[bin]]
name = "focus-send"
path = "src/cli/focus-send.rs"
required-features = ["build-binary"]
