[package]
name = "focus-send"
version = "0.1.0-snapshot"
description = "A bare-bones Focus testing tool"
categories = ["command-line-utilities", "hardware-support"]
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.59.0"

[dependencies.kaleidoscope]
path = "../kaleidoscope"

[dependencies.indicatif]
version = "0.17.1"

[dependencies.clap]
version = "4.0.0-rc.2"
default_features = false
features = ["std", "derive", "env", "help", "usage"]
