[package]
name = "kaleidoscope-focus-cli"
version = "0.1.0-snapshot"
description = "Tiny utilities to talk with Kaleidoscope-powered devices using the Focus protocol"
categories = ["command-line-utilities", "hardware-support"]
license = "GPL-3.0-only"
homepage = "https://github.com/keyboardio/kaleidoscope-focus.rs"
repository = "https://github.com/keyboardio/kaleidoscope-focus.rs"
default-run = "focus"
edition = "2021"
rust-version = "1.59.0"
exclude = [
  "docs/*"
]

[dependencies.anyhow]
version = "1.0"

[dependencies.clap]
version = "4.0"
default-features = false
features = ["std", "derive", "env", "help", "usage"]

[dependencies.indicatif]
version = "0.17.1"

[dependencies.kaleidoscope-focus]
version = "0.1.0-snapshot"
path = "../kaleidoscope-focus"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[[bin]]
name = "focus"
path = "src/focus.rs"

[[bin]]
name = "focus-send"
path = "src/focus-send.rs"
