[package]
name = "kaleidoscope-focus"
version = "0.1.0"
description = "A library to talk with Kaleidoscope-powered devices using the Focus protocol"
categories = ["hardware-support"]
license = "GPL-3.0-only"
homepage = "https://github.com/keyboardio/kaleidoscope-focus.rs"
repository = "https://github.com/keyboardio/kaleidoscope-focus.rs"
edition = "2021"
rust-version = "1.59.0"

[dependencies]
serialport = "4.2"

[dev-dependencies.indicatif]
version = "0.17.1"
